data/derived/comb/progs/unify/prog1554.ml.out
Characters 72-73:
  List.fold_left f base xs;;
                 ^
Error: This expression has type int -> int list -> int list
       but an expression was expected of type int -> int list -> int
       Type int list is not compatible with type int 
